--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizzaria Sabor da Vila</title>
+    <link rel="shortcut icon" href="assets/imagens/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <header>
-        <nav>
-            <img src="" alt="">
-            <ul>
+        <nav class="navbar">
+            <img class="logo" src="assets/imagens/logo.png" alt="Logo da Pizzaria">
+            <ul class="nav-links">
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Cardápio</a></li>
                 <li><a href="#">Sobre Nós</a></li>
@@ -20,8 +21,8 @@
         </nav>
     </header>
     
-    <section>
-        <div>
+    <section class="hero">
+        <div class="hero-text">
             <h1>Sabor da Vila</h1>
             <p>A pizza que conquista o seu coração ❤️</p>
             <a href="#" class="btn">Peça pelo WhatsApp</a>
