--- a/cardapio.html
+++ b/cardapio.html
@@ -7,29 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+   
     <header>
         <nav class="navbar">
-            <img class="logo" src="assets/imagens/logo.png" alt="Logo Pizzaria da Vila">
+            <img src="assets/imagens/logo.png" alt="Logo Pizzaria Sabor da Vila" class="logo">
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="cardapio.html" class="active">Cardápio</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+
+    <main class="menu">
         <h1>Nosso Cardápio</h1>
+        
         <div class="menu-grid">
             <div class="menu-item">
                 <img src="assets/imagens/pizza1.jpg" alt="Pizza Margherita">
                 <h2>Pizza Margherita</h2>
-                <p>Molho de Tomate, mussarela, manjericão fresco.</p>
+                <p>Molho de tomate, mussarela, manjericão fresco.</p>
                 <span class="price">R$ 39,90</span>
             </div>
-
+            
             <div class="menu-item">
-                <img src="assets/images/pizza3.jpg" alt="Pizza Pepperoni">
+                <img src="assets/imagens/pizza3.jpg" alt="Pizza Pepperoni">
                 <h2>Pizza Pepperoni</h2>
                 <p>Mussarela e generosas fatias de pepperoni.</p>
                 <span class="price">R$ 44,90</span>
@@ -40,5 +44,6 @@
     <footer>
         <p>© 2025 Pizzaria Sabor da Vila - Todos os direitos reservados</p>
     </footer>
+
 </body>
 </html>
