--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav class="navbar">
             <img class="logo" src="assets/imagens/logo.png" alt="Logo da Pizzaria">
             <ul class="nav-links">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Cardápio</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                  <li><a href="#">Contato</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="cardapio.html">Cardápio</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
+                  <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
