adicionei mais recursos

--- a/cardapio.html
+++ b/cardapio.html
@@ -61,7 +61,13 @@
         </div>
     </div>
 </section>
-
+<div id="carrinho">
+    <h3>🛒 Meu Carrinho</h3>
+    <ul id="lista-carrinho"></ul>
+    <p id="total">Total: R$ 0,00</p>
+    <button id="finalizar-pedido">Finalizar Pedido</button>
+</div>
+<button id="toggle-carrinho">🛒</button>
 
     <footer>
         <p>© 2025 Pizzaria Sabor da Vila - Todos os direitos reservados</p>
