--- a/cardapio.html
+++ b/cardapio.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio - Pizzaria Sabor da Vila</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   
+
     <header>
         <nav class="navbar">
             <img src="assets/imagens/logo.png" alt="Logo Pizzaria Sabor da Vila" class="logo">
@@ -22,56 +24,36 @@
 
     <main class="menu">
         <h1>Nosso Cardápio</h1>
-        
-       <section class="cardapio">
-    <div class="pizza-card">
-        <img src="imagens/pizza1.jpg" alt="Pizza Margherita">
-        <div class="pizza-info">
-            <h3>Pizza Margherita</h3>
-            <p>Molho de tomate, mussarela, manjericão fresco.</p>
-            <strong>R$ 34,90</strong>
-        </div>
-    </div>
 
-    <div class="pizza-card">
-        <img src="imagens/pizza2.jpg" alt="Pizza Quatro Queijos">
-        <div class="pizza-info">
-            <h3>Pizza Quatro Queijos</h3>
-            <p>Mussarela, provolone, gorgonzola e parmesão.</p>
-            <strong>R$ 42,90</strong>
-        </div>
-    </div>
-
-    <div class="pizza-card">
-        <img src="imagens/pizza3.jpg" alt="Pizza Calabresa">
-        <div class="pizza-info">
-            <h3>Pizza Calabresa</h3>
-            <p>Molho de tomate, mussarela e calabresa fatiada.</p>
-            <strong>R$ 39,90</strong>
-        </div>
-    </div>
-
-    <div class="pizza-card">
-        <img src="imagens/pizza4.jpg" alt="Pizza Portuguesa">
-        <div class="pizza-info">
-            <h3>Pizza Portuguesa</h3>
-            <p>Molho de tomate, mussarela, presunto, ovos e cebola.</p>
-            <strong>R$ 44,90</strong>
-            <button class="add-carrinho" data-pizza="Portuguesa" data-preco="44.90">Adicionar ao Carrinho</button>
-        </div>
-    </div>
-</section>
-<div id="carrinho">
-    <h3>🛒 Meu Carrinho</h3>
-    <ul id="lista-carrinho"></ul>
-    <p id="total">Total: R$ 0,00</p>
-    <button id="finalizar-pedido">Finalizar Pedido</button>
-</div>
-<button id="toggle-carrinho">🛒</button>
-
-    <footer>
-        <p>© 2025 Pizzaria Sabor da Vila - Todos os direitos reservados</p>
-    </footer>
-
+        <section class="menu">
+            <h1>🍕 Nosso Cardápio</h1>
+            <div class="menu-grid">
+                <div class="menu-item">
+                    <img src="assets/imagens/pizza1.jpg" alt="Pizza Calabresa">
+                    <h2 class="pizza-nome">Pizza Calabresa</h2>
+                    <p>Calabresa, cebola, mussarela</p>
+                    <span class="pizza-preco">40,00</span>
+                    <button type="button" class="add-carrinho">Adicionar ao carrinho</button>
+                </div>
+                <div class="menu-item">
+                    <img src="assets/imagens/pizza2.jpg" alt="Pizza Mussarela">
+                    <h2 class="pizza-nome">Pizza Mussarela</h2>
+                    <p>Mussarela especial, tomate, orégano</p>
+                    <span class="pizza-preco">38,00</span>
+                    <button type="button" class="add-carrinho">Adicionar ao carrinho</button>
+                </div>
+            </div>
+        </section>
+        <section id="carrinho">
+            <h2>🛒 Meu Carrinho</h2>
+            <ul id="lista-carrinho"></ul>
+            <p>Total: R$ <span id="total">0</span></p>
+            <a id="finalizar-pedido" href="#" target="_blank" class="btn">Finalizar Pedido</a>
+        </section>
+    </main>
+<footer>
+    <p>© 2025 Pizzaria Sabor da Vila - Todos os direitos reservados</p>
+</footer>
+<script src="scripts/main.js"></script>
 </body>
 </html>
